# mai-os-labs

./: .gitignore  CMakeLists.txt  README.md
cp/: CMakeLists.txt  client.cpp  server.cpp
cp/doc/: report.docx
cp/include/: game.hpp  mappedFile.h  mutex.h
cp/src/: mutex.cpp
lab1/doc/: report.docx
lab2/: CMakeLists.txt  child.cpp  child.out  main.cpp  parent.h  parent.out  string_to_vector.h
lab2/doc/: report.docx
lab2/include/: parent.h  string_to_vector.h
lab2/src/: child.cpp  parent.cpp  string_to_vector.cpp  strint_to_vector.cpp
lab3/: main.cpp
lab3/doc/: report.docx
lab3/include/: lab3.h
lab3/src/: lab3.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/doc/: report.docx
lab4/include/: parent.h
lab4/src/: child.cpp  parent.cpp  string_to_vector.cpp
lab5/: CMakeLists.txt  main_dynamic.cpp  main_static.cpp
lab5/doc/: report.docx
lab5/include/: lib.h  signature.h
lab5/src/: implem1.cpp  implem2.cpp  lib_1.cpp  lib_2.cpp
lab6-8/: CMakeLists.txt  client.cpp  server.cpp
lab6-8/doc/: report.docx
lab6-8/include/: calcnode.hpp  handlernode.hpp  search.h  topology.h  zmqf.h
lab6-8/src/: search.cpp  topology.cpp  zmqf.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_test.cpp  lab6-8_test.cpp
